sorted out domain and z-index issues

--- a/src/components/styling/navbar.scss
+++ b/src/components/styling/navbar.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
+  z-index: 3;
   background: #7e8f97;
 
   .logo {
