--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ body {
   font-family: 'Arapey', serif;
 }
 
-.container {
+/* .container {
   overflow-x: hidden;
 
-}
+} */
